--- a/examples/installation/try-react/index.html
+++ b/examples/installation/try-react/index.html
@@ -2,118 +2,119 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Попробуйте react</title>
-  <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico">
-  <link rel="stylesheet" href="../../../css/header.css">
-  <link rel="stylesheet" href="../../../css/content.css">
-  <link rel="stylesheet" href="../../../libraries/prism.css">
-  <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Попробуйте react</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico">
+    <link rel="stylesheet" href="../../../css/general.css">
+    <link rel="stylesheet" href="style.css">
 
-  <link rel="stylesheet" href="style.css">
-
-  <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-
-  <script src="../../../libraries/prism.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="../../../libraries/header.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <script src="../../../libraries/prism.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../../../libraries/header.js"></script>
 </head>
 
 <body>
 
-  <section class="nav-bar">
-    <div class="nav-container">
-      <div class="brand">
-        <a href="index.html"><img src="../../../images/react-logo.png">Теория</a>
-      </div>
-      <nav>
-        <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
-        <ul class="nav-list">
-          <li>
-            <a href="../../../index.html">Главная</a>
-          </li>
-          <li>
-            <a href="../../../labs.html">Лабораторные работы</a>
-          </li>
-          <li>
-            <a href="../../../theory.html">Теория</a>
-          </li>
-          <li>
-            <a href="../../../info.html">Справочник</a>
-          </li>
-        </ul>
-      </nav>
+    <section class="nav-bar">
+        <div class="nav-container">
+            <div class="brand">
+                <a href="index.html"><img src="../../../images/react-logo.png">Теория</a>
+            </div>
+            <nav>
+                <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+                <ul class="nav-list">
+                    <li>
+                        <a href="../../../index.html">Главная</a>
+                    </li>
+                    <li>
+                        <a href="../../../labs.html">Лабораторные работы</a>
+                    </li>
+                    <li>
+                        <a href="../../../theory.html">Теория</a>
+                    </li>
+                    <li>
+                        <a href="../../../info.html">Справочник</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+
+    <div class="general">
+        <div class="content">
+            <p class="section">Попробуйте React</p>
+
+            <p>Попробуйте React онлайн или установите локальное рабочее окружение.</p>
+
+            <p class="section">Online</p>
+
+            <p>Если вы хотите попробовать React, можете использовать онлайн-площадку. Пример проекта "Hello, World!" с
+                использованием <a href="https://codepen.io/pen?&editors=0010">CodePen</a> или
+                <a href="https://codepen.io/pen?&editors=0010">CodeSandbox</a>.
+            </p>
+
+            <p class="section">
+                HTML-шаблон
+            </p>
+
+            <p>
+                Если вы предпочитаете собственный текстовый редактор,
+                <a href="https://raw.githubusercontent.com/reactjs/reactjs.org/master/static/html/single-file-example.html">
+                    загрузите этот HTML-шаблон</a>. Он выполняет медленное преобразование кода, поэтому не используйте его при
+                разработке.
+            </p>
+
+            <p class="section">
+                Следующие шаги
+            </p>
+
+            <p> Основы
+            <ul>
+                <li>
+                    <span>• </span>Перейдите к разделу <a href="../../quick-start/hello-world/index.html">Основы</a> для
+                    пошагового ознакомления с концепциями React.
+                </li>
+                <li>
+                    <span>• </span>Попробуйте посмотреть <a href="https://reactjs.org/tutorial/tutorial.html">примеры</a>.
+                </li>
+            </ul>
+            </p>
+
+            <p> Полная IDE
+            <p>
+                Вышеизложенные способы подходят, если вы новичок в React или просто экспериментируете. Для создания своего
+                первого приложения с помощью React ознакомьтесь с руководствами по установке ниже. Эти настройки призваны обеспечить
+                комфортную работу и дать возможность
+                разрабатывать приложения.
+            </p>
+            <ul>
+                <li>
+                    <span>• </span><a href="../new-app/index.html">Создайте новое приложение</a> с полнофункциональным стартовым
+                    комплектом.
+                </li>
+                <li>
+                    <span>• </span><a href="../add-to-app/index.html">Включить React</a> в уже существующее приложение.
+                </li>
+            </ul>
+            </p>
+        </div>
+        <div class="site-nav">
+            <p class="site-nav-name">
+                Установка React
+            </p>
+            <ul class="site-nav-list">
+                <li><a href="index.html">Начало работы с React</a></li>
+                <li><a href="../new-app/index.html">Внедряем React в новое приложение</a></li>
+                <li><a href="../add-to-app/index.html">Внедряем React в уже существующее приложение</a></li>
+                <li><a href="../cdn-links/index.html">CDN ссылки</a></li>
+            </ul>
+        <script type="text/babel" src="../../../libraries/navigator.js"></script>
+        </div>
     </div>
-  </section>
-
-  <div id="delimiter"></div>
-
-  <div class="content">
-    <p class="section">Попробуйте React</p>
-
-    <p>Попробуйте React онлайн или установите локальное рабочее окружение.</p>
-
-    <p class="section">Online</p>
-
-    <p>Если вы хотите попробовать React, можете использовать онлайн-площадку. Пример проекта "Hello, World!" с
-      использованием <a href="https://codepen.io/pen?&editors=0010">CodePen</a> или
-      <a href="https://codepen.io/pen?&editors=0010">CodeSandbox</a>.</p>
-
-    <p class="section">
-      HTML-шаблон
-    </p>
-
-    <p>
-      Если вы предпочитаете собственный текстовый редактор,
-      <a href="https://raw.githubusercontent.com/reactjs/reactjs.org/master/static/html/single-file-example.html">
-        загрузите этот HTML-шаблон</a>. Он выполняет медленное преобразование кода, поэтому не используйте его при
-      разработке.
-    </p>
-
-    <p class="section">
-      Следующие шаги
-    </p>
-
-    <p> Основы
-      <ul>
-        <li>
-          <span>• </span>Перейдите к разделу <a href="../../quick-start/hello-world/index.html">Основы</a> для
-          пошагового ознакомления с концепциями React.
-        </li>
-        <li>
-          <span>• </span>Попробуйте посмотреть <a href="https://reactjs.org/tutorial/tutorial.html">примеры</a>.
-        </li>
-      </ul>
-    </p>
-
-    <p> Полная IDE
-      <p>
-        Вышеизложенные способы подходят, если вы новичок в React или просто экспериментируете. Для создания своего
-    первого приложения с помощью React ознакомьтесь с руководствами по установке ниже. Эти настройки призваны обеспечить
-    комфортную работу и дать возможность
-        разрабатывать приложения.
-      </p>
-      <ul>
-        <li>
-          <span>• </span><a href="../new-app/index.html">Создайте новое приложение</a> с полнофункциональным стартовым
-          комплектом.
-        </li>
-        <li>
-          <span>• </span><a href="../add-to-app/index.html">Включить React</a> в уже существующее приложение.
-        </li>
-      </ul>
-    </p>
-
-    <div class="lr-btn">
-        <button class="atuin-btn" onclick="window.location.href = '../../installation/new-app/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
-    </div>
-
-  </div>
-
 </body>
 
 </html>
