--- a/examples/installation/new-app/index.html
+++ b/examples/installation/new-app/index.html
@@ -2,25 +2,19 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Создание нового приложения</title>
-  <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico">
-  <link rel="stylesheet" href="../../../css/header.css">
-  <link rel="stylesheet" href="../../../css/content.css">
-  <link rel="stylesheet" href="../../../libraries/prism.css">
-  <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Попробуйте react</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico">
+    <link rel="stylesheet" href="../../../css/general.css">
+    <link rel="stylesheet" href="style.css">
 
-  <link rel="stylesheet" href="style.css">
-
-  <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-
-  <script src="../../../libraries/prism.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="../../../libraries/header.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <script src="../../../libraries/prism.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../../../libraries/header.js"></script>
 </head>
 
 <body>
@@ -50,8 +44,7 @@
     </div>
   </section>
 
-  <div id="delimiter"></div>
-
+<div class="general">
   <div class="content">
     <p class="section">Создание нового приложения React</p>
 
@@ -118,12 +111,20 @@
     <p>
       Если вы предпочитаете вручную настраивать проект, см. Раздел <a href="../add-to-app/index.html">Установка React</a> в следующем разделе.
     </p>
-
-    <div class="lr-btn">
-        <button class="atuin-btn" onclick="window.location.href = '../../installation/try-react/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
-        <button class="atuin-btn" onclick="window.location.href = '../../installation/add-to-app/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
-    </div>
   </div>
+  <div class="site-nav">
+            <p class="site-nav-name">
+                Установка React
+            </p>
+            <ul class="site-nav-list">
+                <li><a href="../try-react/index.html">Начало работы с React</a></li>
+                <li><a href="index.html">Внедряем React в новое приложение</a></li>
+                <li><a href="../add-to-app/index.html">Внедряем React в уже существующее приложение</a></li>
+                <li><a href="../cdn-links/index.html">CDN ссылки</a></li>
+            </ul>
+        <script type="text/babel" src="../../../libraries/navigator.js"></script>
+    </div>
+</div>
 
 </body>
 
