Исправление ошибки с подсветкой текущего пункта меню

--- a/examples/installation/try-react/index.html
+++ b/examples/installation/try-react/index.html
@@ -113,6 +113,9 @@
                 <li><a href="../cdn-links/index.html">CDN ссылки</a></li>
             </ul>
         <script type="text/babel" src="../../../libraries/navigator.js"></script>
+        <script>$(document).ready(function(){
+    $('.site-nav-list a[href="index.html"]').parent().toggleClass('site-nav-list-active'); 
+});</script>
         </div>
     </div>
 </body>
