--- a/examples/installation/add-to-app/index.html
+++ b/examples/installation/add-to-app/index.html
@@ -79,14 +79,14 @@
       Для установки React с использованием Yarn:
     </p>
 
-    <pre><code class="language-jsx">  yarn init
+    <pre><code class="language-js">  yarn init
   yarn add react react-dom</code></pre>
 
     <p>
       Для установки React с использованием npm:
     </p>
 
-    <pre><code class="language-jsx">  npm init
+    <pre><code class="language-js">  npm init
   npm install --save react react-dom</code></pre>
 
     <p>
@@ -114,7 +114,7 @@
       Самый маленький пример React выглядит так:
     </p>
 
-    <pre><code class="language-jsx">  import React from 'react';
+    <pre><code class="language-js">  import React from 'react';
   import ReactDOM from 'react-dom';
 
   ReactDOM.render(
@@ -166,6 +166,9 @@
                 <li><a href="../cdn-links/index.html">CDN ссылки</a></li>
             </ul>
         <script type="text/babel" src="../../../libraries/navigator.js"></script>
+        <script>$(document).ready(function(){
+    $('.site-nav-list a[href="index.html"]').parent().toggleClass('site-nav-list-active'); 
+});</script>
     </div>
 </div>
 </body>
