Искусственные точки списков заменены настоящими

--- a/examples/advanced/reconciliation/index.html
+++ b/examples/advanced/reconciliation/index.html
@@ -74,8 +74,8 @@
         предположениях:</p>
 
     <ul>
-        <li><span>• </span>Два элемента разных типов будут создавать разные деревья.</li>
-        <li><span>• </span>Разработчик может указать, какие дочерние элементы могут быть стабильными между разными
+        <li>Два элемента разных типов будут создавать разные деревья.</li>
+        <li>Разработчик может указать, какие дочерние элементы могут быть стабильными между разными
             отрисовками с
             помощью свойства key.
         </li>
