--- a/examples/advanced/refs-and-dom/index.html
+++ b/examples/advanced/refs-and-dom/index.html
@@ -61,9 +61,9 @@
     <p class="section">Когда стоит использовать ссылки?</p>
     <p>Ссылки следует использовать в следующих ситуациях:</p>
     <ul>
-        <li><span>• </span>Управление фокусом, выделением текста или воспроизведением мультимедиа</li>
-        <li><span>• </span>Переключение необходимой анимации</li>
-        <li><span>• </span>Интеграция со сторонними DOM библиотеками</li>
+        <li>Управление фокусом, выделением текста или воспроизведением мультимедиа</li>
+        <li>Переключение необходимой анимации</li>
+        <li>Интеграция со сторонними DOM библиотеками</li>
     </ul>
 
     <p class="section">Создание ссылок</p>
@@ -96,13 +96,13 @@
 
     <p>Значение ref отличается в зависимости от типа узла:</p>
     <ul>
-        <li><span>• </span>Когда атрибут ref используется на HTML-элементе, объект ref, созданный в конструкторе с
+        <li>Когда атрибут ref используется на HTML-элементе, объект ref, созданный в конструкторе с
             помощью React.createRef(), в качестве значения своего свойства current получает нативный DOM элемент.
         </li>
-        <li><span>• </span>Когда атрибут ref используется на пользовательском компоненте-классе, объект ref в качестве
+        <li>Когда атрибут ref используется на пользовательском компоненте-классе, объект ref в качестве
             значения своего свойства current получает закрепленный экземпляр компонента.
         </li>
-        <li><span>• </span>Вы не можете использовать атрибут ref для компонентов-функций, так как они не имеют
+        <li>Вы не можете использовать атрибут ref для компонентов-функций, так как они не имеют
             экземпляров.
         </li>
     </ul>
