--- a/examples/installation/add-to-app/index.html
+++ b/examples/installation/add-to-app/index.html
@@ -57,13 +57,13 @@
 
     <ul>
       <li>
-        <span>• </span> Менеджер пакетов, например, <a href="https://yarnpkg.com/lang/en/">Yarn</a> или <a href="https://www.npmjs.com/">npm</a>. Это позволяет вам использовать обширную базу сторонних пакетов и легко устанавливать или обновлять их.
+        Менеджер пакетов, например, <a href="https://yarnpkg.com/lang/en/">Yarn</a> или <a href="https://www.npmjs.com/">npm</a>. Это позволяет вам использовать обширную базу сторонних пакетов и легко устанавливать или обновлять их.
       </li>
       <li>
-        <span>• </span>Сборщик, такой как <a href="https://webpack.js.org/">webpack</a> или <a href="http://browserify.org/">Browserify</a>. Он позволяет писать модульный код и объединять его в небольшие пакеты для оптимизации времени загрузки.
+        Сборщик, такой как <a href="https://webpack.js.org/">webpack</a> или <a href="http://browserify.org/">Browserify</a>. Он позволяет писать модульный код и объединять его в небольшие пакеты для оптимизации времени загрузки.
       </li>
       <li>
-        <span>• </span>Компилятор, такой как <a href="http://babeljs.io/">Babel</a>. Он позволяет писать современный JavaScript-код, который по-прежнему работает в старых браузерах.
+        Компилятор, такой как <a href="http://babeljs.io/">Babel</a>. Он позволяет писать современный JavaScript-код, который по-прежнему работает в старых браузерах.
       </li>
     </ul>
 
