--- a/examples/installation/new-app/index.html
+++ b/examples/installation/new-app/index.html
@@ -53,7 +53,7 @@
     <p>
       Заметка:
       <ul>
-        <li> <span>• </span> На этой странице описывается настройка одностраничного приложения со всем необходимым для комфортного процесса разработки, включая листинг, тестирование, оптимизацию производства и многое другое. Для полнофункциональных инструментов,
+        <li>На этой странице описывается настройка одностраничного приложения со всем необходимым для комфортного процесса разработки, включая листинг, тестирование, оптимизацию производства и многое другое. Для полнофункциональных инструментов,
           таких как эти, требуется некоторое время и место на диске.
           <br /> Если вы ищете легковесную среду для экспериментов с React, вместо этого проверьте страницу <a href="../try-react/index.html">Try React</a>. <a href="https://raw.githubusercontent.com/reactjs/reactjs.org/master/static/html/single-file-example.html">Одного HTML-файла</a> достаточно, чтобы вы начали!
           <br /> Наконец, если вы не создаете одностраничное приложение, вы можете либо <a href="../add-to-app/index.html">добавить React в существующий конвейер сборки</a>, либо <a href="../cdn-links/index.html">использовать его из CDN</a> и <a href="../../advanced/react-without-jsx/index.html">без этапа сборки</a>.
