--- a/examples/installation/try-react/index.html
+++ b/examples/installation/try-react/index.html
@@ -75,11 +75,11 @@
             <p> Основы
             <ul>
                 <li>
-                    <span>• </span>Перейдите к разделу <a href="../../quick-start/hello-world/index.html">Основы</a> для
+                    Перейдите к разделу <a href="../../quick-start/hello-world/index.html">Основы</a> для
                     пошагового ознакомления с концепциями React.
                 </li>
                 <li>
-                    <span>• </span>Попробуйте посмотреть <a href="https://reactjs.org/tutorial/tutorial.html">примеры</a>.
+                    Попробуйте посмотреть <a href="https://reactjs.org/tutorial/tutorial.html">примеры</a>.
                 </li>
             </ul>
             </p>
@@ -93,11 +93,11 @@
             </p>
             <ul>
                 <li>
-                    <span>• </span><a href="../new-app/index.html">Создайте новое приложение</a> с полнофункциональным стартовым
+                    <a href="../new-app/index.html">Создайте новое приложение</a> с полнофункциональным стартовым
                     комплектом.
                 </li>
                 <li>
-                    <span>• </span><a href="../add-to-app/index.html">Включить React</a> в уже существующее приложение.
+                    <a href="../add-to-app/index.html">Включить React</a> в уже существующее приложение.
                 </li>
             </ul>
             </p>
