--- a/examples/quick-start/handling-events/index.html
+++ b/examples/quick-start/handling-events/index.html
@@ -56,8 +56,11 @@
 
     <p>Обработка событий с помощью элементов React подобна обработке событий на элементах DOM. Но есть пара
     синтаксических различий:</p>
-    <p>• Имена событиям в React дают в соответствии со стилем camelCase.</p>
-    <p>• С помощью JSX функция передаётся как обработчик события, а не как строка.</p>
+
+    <ul>
+        <li>Имена событиям в React дают в соответствии со стилем camelCase.</li>
+        <li>С помощью JSX функция передаётся как обработчик события, а не как строка.</li>
+    </ul>
     <p>Например, в HTML:</p>
 
     <pre><code class="language-jsx">
