--- a/examples/quick-start/thinking-in-react/index.html
+++ b/examples/quick-start/thinking-in-react/index.html
@@ -115,13 +115,13 @@
     <mark>ProductTableHeader</mark>.</p>
     <p>Теперь, когда мы идентифицировали все компоненты в нашем макете, выстроим из них иерархию:</p>
     <ul>
-        <li>• FilterableProductTable</li>
+        <li>FilterableProductTable</li>
         <ul>
-            <li>• SearchBar</li>
-            <li>• ProductTable</li>
+            <li>SearchBar</li>
+            <li>ProductTable</li>
             <ul>
-                <li>• ProductCategoryRow</li>
-                <li>• ProductRow</li>
+                <li>ProductCategoryRow</li>
+                <li>ProductRow</li>
             </ul>
         </ul>
     </ul>
@@ -162,12 +162,12 @@
     воспользуйтесь размером созданного массива.</p>
     <p>Обдумаем все фрагменты информации из нашего примера приложения. У нас есть:</p>
 
-    <uL>
-        <li>• Базовый список товаров</li>
-        <li>• Текст для поиска информации, введенный пользователем</li>
-        <li>• Значение элемента-флага</li>
-        <li>• Отсортированный список товаров</li>
-    </uL>
+    <ul>
+        <li>Базовый список товаров</li>
+        <li>Текст для поиска информации, введенный пользователем</li>
+        <li>Значение элемента-флага</li>
+        <li>Отсортированный список товаров</li>
+    </ul>
 
     <p>Давайте пройдемся по каждому и определимся с его состоянием. Просто зададим три вопроса каждому из них:</p>
 
@@ -185,8 +185,8 @@
     <p>Итак, состоянием являются:</p>
 
     <ul>
-        <li>• Текст для поиска информации, введенный пользователем</li>
-        <li>• Значение элемента-флага</li>
+        <li>Текст для поиска информации, введенный пользователем</li>
+        <li>Значение элемента-флага</li>
     </ul>
 
     <p class="section">Определитесь с местом жизни состояния</p>
@@ -199,12 +199,12 @@
     <p>Для каждого фрагмента состояния в вашем приложении:</p>
 
     <ul>
-        <li>• Определите каждый компонент, который отвечает за рендеринг на основе этого состояния.</li>
-        <li>• Найдите общий компонент-владелец (компонент, который находится наверху иерархии и  включает компоненты,
+        <li>Определите каждый компонент, который отвечает за рендеринг на основе этого состояния.</li>
+        <li>Найдите общий компонент-владелец (компонент, который находится наверху иерархии и  включает компоненты,
         которые используют это состояние).</li>
-        <li>• Либо общий компонент-владелец, либо другой компонент, находящийся выше по иерархии, должны обладать этим
+        <li>Либо общий компонент-владелец, либо другой компонент, находящийся выше по иерархии, должны обладать этим
         состоянием.</li>
-        <li>• Если вы не можете найти компонент, в который имеет смысл поместить состояние, то создайте новый компонент,
+        <li>Если вы не можете найти компонент, в который имеет смысл поместить состояние, то создайте новый компонент,
         который будет отвечать исключительно за состояние, и включите его в иерархию выше общего компонента-владельца.
         </li>
     </ul>
@@ -212,10 +212,10 @@
     <p>Давайте пройдемся по этому списку непосредственно на нашем примере:</p>
 
     <ul>
-        <li>• Компонент <mark>ProductTable</mark> должен сортировать список товаров по состоянию и компонент
+        <li>Компонент <mark>ProductTable</mark> должен сортировать список товаров по состоянию и компонент
         <mark>SearchBar</mark> должен отображать состояние текста для поиска информации и элемента-флага. </li>
-        <li>• Общим компонентом-владельцем является <mark>FilterableProductTable</mark>.</li>
-        <li>• Наилучшим местом для размещения состояния является <mark>FilterableProductTable</mark>.</li>
+        <li>Общим компонентом-владельцем является <mark>FilterableProductTable</mark>.</li>
+        <li>Наилучшим местом для размещения состояния является <mark>FilterableProductTable</mark>.</li>
     </ul>
 
     <p>Итак, мы решили, что состояние будет жить в <mark>FilterableProductTable</mark>. Во-первых, добавим образцовое
