--- a/examples/redux/about-redux/index.html
+++ b/examples/redux/about-redux/index.html
@@ -58,9 +58,9 @@
     <p>Вот несколько советов о том, когда имеет смысл использовать Redux:</p>
 
     <ul>
-        <li>• У вас есть обоснованные объемы данных, меняющихся со временем.</li>
-        <li>• Вам нужен один источник информации для вашего состояния.</li>
-        <li>• Вы приходите к выводу, что сохранять все ваше состояние в компоненте верхнего уровня уже недостаточно.</li>
+        <li>У вас есть обоснованные объемы данных, меняющихся со временем.</li>
+        <li>Вам нужен один источник информации для вашего состояния.</li>
+        <li>Вы приходите к выводу, что сохранять все ваше состояние в компоненте верхнего уровня уже недостаточно.</li>
     </ul>
 
     <p>Да, эти рекомендации являются субъективными и расплывчатыми, но это справедливо. Точка, в которой вы должны
