--- a/examples/redux/middleware/index.html
+++ b/examples/redux/middleware/index.html
@@ -343,13 +343,13 @@
     важными аспектами:</p>
 
     <ul>
-        <li>• Она предоставляет связующему ПО подмножество API хранилища: методы <mark>dispatch(action)</mark> и
+        <li>Она предоставляет связующему ПО подмножество API хранилища: методы <mark>dispatch(action)</mark> и
         <mark>getState()</mark>.</li>
-        <li>• Она использует некоторые хитрости для того, чтобы убедиться, что, действие снова пройдет через всю
+        <li>Она использует некоторые хитрости для того, чтобы убедиться, что, действие снова пройдет через всю
         цепочку связующего ПО, включая текущее, если вы вызываете <mark>store.dispatch(action)</mark> из вашего
         связующего ПО вместо <mark>next(action)</mark>. Это полезно для асинхронного связующего ПО, как мы ранее
         видели.</li>
-        <li>• Для того чтобы гарантировать, что вы можете применить связующее ПО только один раз, она работает с
+        <li>Для того чтобы гарантировать, что вы можете применить связующее ПО только один раз, она работает с
         <mark>createStore()</mark>, а не с самим <mark>store</mark>. Вместо <mark>(store, middlewares) => store</mark>,
         ее сигнатурой является <mark>(...middlewares) => (createStore) => createStore</mark>.</li>
     </ul>
