--- a/examples/redux/reducers/index.html
+++ b/examples/redux/reducers/index.html
@@ -101,9 +101,9 @@
     функциями. Вот список того, чего никогда нельзя делать в редюсере:</p>
 
     <ul>
-        <li>• Непосредственно изменять то, что пришло в аргументах функции;</li>
-        <li>• Выполнять какие-либо сайд-эффекты: обращаться к API или осуществлять переход по роутам;</li>
-        <li>• Вызывать не чистые функции, например <mark>Date.now()</mark> или <mark>Math.random()</mark>.</li>
+        <li>Непосредственно изменять то, что пришло в аргументах функции;</li>
+        <li>Выполнять какие-либо сайд-эффекты: обращаться к API или осуществлять переход по роутам;</li>
+        <li>Вызывать не чистые функции, например <mark>Date.now()</mark> или <mark>Math.random()</mark>.</li>
     </ul>
 
     <p>Мы рассмотрим способы выполнения сайд-эффектов чуть позже. На данный момент просто запомните, что редюсер должен
@@ -350,8 +350,8 @@
     <p>Теперь мы можем переписать наш главный редюсер как функцию, которая:</p>
 
     <ul>
-      <li>• вызывает другие редюсеры, обрабатывающие части состояния;</li>
-      <li>• собирает отдельно обработанные части состояния в один цельный объект. Также главному редюсеру больше нет
+      <li>вызывает другие редюсеры, обрабатывающие части состояния;</li>
+      <li>собирает отдельно обработанные части состояния в один цельный объект. Также главному редюсеру больше нет
       необходимости знать полное начальное состояние. Достаточно того, что каждый дочерний редюсер возвращает свое
       начальное состояние, если при первом вызове получает <mark>undefined</mark> вместо <mark>state</mark>.</li>
     </ul>
