--- a/examples/redux/store/index.html
+++ b/examples/redux/store/index.html
@@ -52,10 +52,10 @@
     <p>Хранилище — это объект, который соединяет эти части вместе. Хранилище берет на себя следующие задачи:</p>
 
     <ul>
-        <li>• содержит состояние приложения;</li>
-        <li>• предоставляет доступ к состоянию с помощью <mark>getState()</mark>;</li>
-        <li>• предоставляет возможность обновления состояния с помощью <mark>dispatch(action)</mark>;</li>
-        <li>• регистрирует слушателей c помощью <mark>ubscribe(listener)</mark>.</li>
+        <li>содержит состояние приложения;</li>
+        <li>предоставляет доступ к состоянию с помощью <mark>getState()</mark>;</li>
+        <li>предоставляет возможность обновления состояния с помощью <mark>dispatch(action)</mark>;</li>
+        <li>регистрирует слушателей c помощью <mark>ubscribe(listener)</mark>.</li>
     </ul>
 
     <p>Важно отметить, что у Вас будет только одно хранилище в Redux-приложении. Если Вы захотите разделить логику
