--- a/examples/redux/async-actions/index.html
+++ b/examples/redux/async-actions/index.html
@@ -55,17 +55,17 @@
 
     <ul>
         <li>
-            <b>• Действие, информирующее редюсер о том, что запрос начался.</b></br>
+            <b>Действие, информирующее редюсер о том, что запрос начался.</b></br>
             Редюсер может обрабатывать такой вид действия, переключая флаг <mark>isFetching</mark> в состоянии
             приложения. Именно так UI понимает, что самое время показать лоадер/спиннер.
         </li>
         <li>
-            <b>• Действие, информирующее редюсер о том, что запрос успешно завершился.</b></br>
+            <b>Действие, информирующее редюсер о том, что запрос успешно завершился.</b></br>
             Редюсер может обрабатывать такой вид действия, объединяя полученные из запроса данные с тем срезом
             состояния, которым управляет этот редюсер и сбрасывая флаг <mark>isFetching</mark>.
         </li>
         <li>
-            <b>• Действие, информирующее редюсер о том, что запрос завершился неудачей.</b></br>
+            <b>Действие, информирующее редюсер о том, что запрос завершился неудачей.</b></br>
             Редюсер может обрабатывать такой вид действия сбрасывая флаг <mark>isFetching</mark>. Также некоторые
             редюсеры могут хотеть сохранить сообщение об ошибке, чтобы UI мог его отобразить.
         </li>
@@ -215,13 +215,13 @@
     <p>Тут есть несколько важных моментов:</p>
 
     <ul>
-        <li>• Мы храним информацию о каждом <mark>subreddit</mark> отдельно, следовательно мы можем кешировать любой
+        <li>Мы храним информацию о каждом <mark>subreddit</mark> отдельно, следовательно мы можем кешировать любой
         <mark>subreddit</mark>. Когда пользователь переключается между ними во второй раз, обновление UI будет
         мгновенным и сможем не перезагружать данные если мы этого не хотим. Не переживайте о том, что все эти элементы
         <mark>subreddit</mark>, а их может быть очень много) будут находиться в памяти: Вам не понадобятся никакие
         чистки памяти, если только вы и ваш пользователь не имеете дело с десятками тысяч элементов и при этом
         пользователь очень редко закрывает вкладку браузера.</li>
-        <li>• Для каждого списка элементов вы захотите хранить <mark>isFetching</mark> для показа спиннера,
+        <li>Для каждого списка элементов вы захотите хранить <mark>isFetching</mark> для показа спиннера,
         <mark>didInvalidate</mark>, который вы потом сможете установить в <mark>true</mark>, если данные устареют,
         <mark>lastUpdated</mark> для того чтобы знать, когда данные были обновлены в последний раз, и собственно
         <mark>items</mark>. В реальном приложении вы также захотите хранить состояние страничной навигации:
@@ -358,7 +358,7 @@
 
     <ul>
         <li>
-            • Мы используем ES6-синтаксис вычисляемого свойства, т.е. мы можем обновить
+            Мы используем ES6-синтаксис вычисляемого свойства, т.е. мы можем обновить
             <mark>state[action.subreddit]</mark> с помощью <mark>Object.assign()</mark> с использованием меньшего
             количества строк кода. Вот это:
 
@@ -377,7 +377,7 @@
             </code></pre>
         </li>
         <li>
-            • Мы извлекли <mark>posts(state, action)</mark>, который управляет состоянием конкретного списка постов. Это
+            Мы извлекли <mark>posts(state, action)</mark>, который управляет состоянием конкретного списка постов. Это
             просто компоновка редюсеров! Нам выбирать, как разбить/разделить редюсер на более мелкие редюсеры и в этом
             случае, мы доверяем обновление элементов внутри объекта функции-редюсеру <mark>posts</mark>.
         </li>
