--- a/info.html
+++ b/info.html
@@ -40,6 +40,7 @@
     <div id="delimiter"></div>
 
     <div class="content">
+        <p class="section">Справочник</p>
         <p>В данном разделе вы найдете вспомогательную информацию для написания лабораторных работ. Для вашего удобства весь материал разделен на категории.</p>
         <div class="lr-block">
            <p class="section-title">Начало работы с React.js, Node.js</p>
