--- a/theory.html
+++ b/theory.html
@@ -41,6 +41,7 @@
         <div id="delimiter"></div>
 
         <div class="content">
+            <p class="section">Теория</p>
             <p class="section">Установка React</p>
             <ul class="lr-list">
                 <li><a href="examples/installation/try-react/index.html">Начало работы с React</a></li>
