Фикс стилей на главных страница
Исправление стилей страниц и заголовков (Теория, Содержание, ЛР)

--- a/info.html
+++ b/info.html
@@ -39,7 +39,7 @@
     </section>
     <div id="delimiter"></div>
 
-    <div class="content">
+    <div class="content" style="max-width: 100%; margin: 0 10%;">
         <p class="section">Справочник</p>
         <p>В данном разделе вы найдете вспомогательную информацию для написания лабораторных работ. Для вашего удобства весь материал разделен на категории.</p>
         <div class="lr-block">
