--- a/labs.html
+++ b/labs.html
@@ -39,7 +39,7 @@
     </section>
     <div id="delimiter"></div>
 
-    <div class="content">
+    <div class="content" style="max-width: 100%; margin: 0 10%;">
         <p class="section">Лабораторные работы по React.js</p>
         <div class="lr-block">
             <ol class="lr-list">
