--- a/theory.html
+++ b/theory.html
@@ -40,17 +40,17 @@
         </section>
         <div id="delimiter"></div>
 
-        <div class="content">
+        <div class="content" style="max-width: 100%; margin: 0 10%;">
             <p class="section">Теория</p>
-            <p class="section">Установка React</p>
-            <ul class="lr-list">
+            <p class="section-title">Установка React</p>
+            <ol class="lr-list">
                 <li><a href="examples/installation/try-react/index.html">Начало работы с React</a></li>
                 <li><a href="examples/installation/new-app/index.html">Внедряем React в новое приложение</a></li>
                 <li><a href="examples/installation/add-to-app/index.html">Внедряем React в уже существующее приложение</a></li>
                 <li><a href="examples/installation/cdn-links/index.html">CDN ссылки</a></li>
-            </ul>
-            <p class="section">Основы</p>
-            <ul class="lr-list">
+            </ol>
+            <p class="section-title">Основы</p>
+            <ol class="lr-list">
                 <li><a href="examples/quick-start/hello-world/index.html">Hello, world!</a></li>
                 <li><a href="examples/quick-start/introducing-jsx/index.html">Введение в JSX</a></li>
                 <li><a href="examples/quick-start/rendering-elements/index.html">Создание элементов</a></li>
@@ -63,10 +63,10 @@
                 <li><a href="examples/quick-start/lifting-state-up/index.html">Передача состояния наверх</a></li>
                 <li><a href="examples/quick-start/composition-vs-inheritance/index.html">Композиция вместо наследования</a></li>
                 <li><a href="examples/quick-start/thinking-in-react/index.html">Мышление в React</a></li>
-            </ul>
+            </ol>
 
-            <p class="section">Продвинутый React.js</p>
-            <ul class="lr-list">
+            <p class="section-title">Продвинутый React.js</p>
+            <ol class="lr-list">
                 <li><a href="examples/advanced/jsx-in-depth/index.html">JSX подробнее</a></li>
                 <li><a href="examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes</a></li>
                 <li><a href="examples/advanced/static-typechecking/index.html">Статическая проверка типов</a></li>
@@ -85,10 +85,10 @@
                 <li><a href="examples/advanced/render-props/index.html">Props'ы рендера</a></li>
                 <li><a href="examples/advanced/integrating-with-lib/index.html">Интеграция с другими библиотеками</a></li>
                 <li><a href="examples/advanced/strict-mode/index.html">Строгий режим</a></li>
-            </ul>
+            </ol>
 
-            <p class="section">Справочник</p>
-            <ul class="lr-list">
+            <p class="section-title">Справочник</p>
+            <ol class="lr-list">
                 <li><a href="examples/reference/react-api/index.html">React</a></li>
                 <li><a href="examples/reference/react-component/index.html">React.Component</a></li>
                 <li><a href="examples/reference/react-dom/index.html">ReactDOM</a></li>
@@ -100,10 +100,10 @@
                 <li><a href="#">Тестовый отрисовщик</a></li>
                 <li><a href="#">Требования к среде JavaScript</a></li>
                 <li><a href="#">Словарь</a></li>
-            </ul>
+            </ol>
 
-            <p class="section">Redux.js</p>
-            <ul class="lr-list">
+            <p class="section-title">Redux.js</p>
+            <ol class="lr-list">
                 <li><a href="examples/redux/about-redux/index.html">О Redux</a></li>
                 <li><a href="examples/redux/install/index.html">Установка</a></li>
                 <li><a href="examples/redux/introduction/index.html">Введение</a></li>
@@ -115,7 +115,7 @@
                 <li><a href="examples/redux/async-actions/index.html">Асинхронные действия</a></li>
                 <li><a href="examples/redux/async-flow/index.html">Асинхронный поток</a></li>
                 <li><a href="examples/redux/middleware/index.html">Связующее ПО</a></li>
-            </ul>
+            </ol>
         </div>
 
 </body>
